Pending changes in the mainline
===============================

* SeriesList: 
  - display the SeriesNumber tag in front of image count.
  - order series by SeriesNumber
  - don't show non displayable series (see "SkipSeriesFromModalities")
* In the top right overlay, display ContentDate/ContentTime if they are 
  available in the instance.  If not, StudyDate is displayed (previous
  behavior)
* New configuration options:
  - "TimeFormat" to control the way Dicom Times are displayed.
  - "SkipSeriesFromModalities" to ignore series from given modality types.


Version 2.2 (2021-08-31)
========================

* Support detection of windowing and rescale in Philips multiframe images
* Fix values reported in "ww/wc" info panel (windowing width and center)


Version 2.1 (2021-06-29)
========================

* New configuration options:
  - "DownloadDicomDir" to download archives containing DICOMDIR instead of
    a human-readable hierarchy of folders
  - "InstitutionLogo" to display the logo of your institution in the viewer
* If available, use ZIP streaming from Orthanc >= 1.9.4 to create archives
* Group together in a single "virtual series" all the instances
  without the tag "NumberOfFrames" (0028,0008), for US CINE series
  

Version 2.0 (2021-05-27)
========================

* New tools for annotations: segment length, circle, angle and eraser
* Patient birth date is now displayed in the overlays
* New argument "token" to set HTTP header "Authorization: Bearer <token>"
  for each request to the DICOMweb server
* Fix issue #197 (Support for passing credentials with all HTTP requests)
* Emscripten version: 2.0.23


Version 1.0 (2020-12-02)
========================

* Initial release
* Emscripten version: 1.39.17-upstream